HOTT-2282: Fix heading/subheading overview measure alignment

--- a/app/webpacker/src/stylesheets/_commodity-tree.scss
+++ b/app/webpacker/src/stylesheets/_commodity-tree.scss
@@ -242,11 +242,6 @@ article.tariff {
         @media (min-width: 641px) {
           float: right;
           width: 514px;
-
-          @supports(display: flex) {
-            display: flex;
-            align-items: flex-end;
-          }
         }
 
         .lte-ie8 & {
